--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="profile_name">
           Evgeniia Ershova
           <div class="contact_info">
-            <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+            <img src="../html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           jdoe@jeemail.com
         </div>
         <div style="clear:both;"></div>
@@ -35,7 +35,7 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="../IBM/3.jpg" alt="Profile Image" class="profile_image"/>
+        <img src="3.jpg" alt="Profile Image" class="profile_image"/>
       </div>
 
       <div>
