--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="../3.jpg" alt="Profile Image" class="profile_image"/>
+        <img src="3.jpg" alt="Profile Image" class="profile_image"/>
       </div>
 
       <div>
